--- a/level2/design.html
+++ b/level2/design.html
@@ -98,6 +98,9 @@
         </header>
         <div class="innerS">
           <p>
+            まず、色に関する知識の基本を知りたい場合は、<a href="color.html">こちら</a>から学習してください。
+          </p>
+          <p>
             背景と色の組み合わせを意識することで、見やすさに大きな差が生まれます。例えば、青の背景に紫の文字で作られたwebサイトを考えると、見にくいことがはっきりわかります。このように、寒色と寒色や暖色と暖色の組み合わせはwebサイトを見にくくしてしまいます。
           </p>
 
