--- a/level3/idea.html
+++ b/level3/idea.html
@@ -71,8 +71,8 @@
               <li><a href="#sec02">幅を意識した発想法</a></li>
               <li><a href="#sec03">全体を意識した発想法</a></li>
               <li><a href="#sec04">まとめ</a></li>
-              <li><a href="#sec05">ナレッジグラフ</a></li>
-              <li><a href="#sec06">サンプル</a></li>
+              <li><a href="#sec05"></a></li>
+              <li><a href="#sec06"></a></li>
             </ul>
             <ul id="sns">
               <li><a href="https://twitter.com/m_seminar" target="_blank"><img src="../images/iconTw.png" width="20" height="20" alt="twitter"></a></li>
