--- a/level3/marketing.html
+++ b/level3/marketing.html
@@ -66,12 +66,10 @@
           <div class="panel">
             <ul>
               <li><a href="#top">top</a></li>
-              <li><a href="#sec01">リンク</a></li>
-              <li><a href="#sec02">構造化データ</a></li>
-              <li><a href="#sec03">リッチスニペット</a></li>
-              <li><a href="#sec04">コンテンツの属性</a></li>
-              <li><a href="#sec05">ナレッジグラフ</a></li>
-              <li><a href="#sec06">サンプル</a></li>
+              <li><a href="#sec01">Webマーケティング</a></li>
+              <li><a href="#sec02">集客施策</a></li>
+              <li><a href="#sec03">接客施策</a></li>
+              <li><a href="#sec04">策訪問施策</a></li>
             </ul>
             <ul id="sns">
               <li><a href="https://twitter.com/m_seminar" target="_blank"><img src="../images/iconTw.png" width="20" height="20" alt="twitter"></a></li>
@@ -125,8 +123,81 @@
             比較によって、自分たちでは強みだと思っていたことが強みではなかったりする一方、当たり前だと思っていたことが強みだったと認識できます。
             そしてこれらで得られた情報を元にして、「・誰に向けて・どの方法で・何を」伝えていくかの戦略を立てて、施策を行います。戦略を立てて方向性を決定したならば、具体的な施策を行なっていきます。
           </p>
-      </div>
-    </section>
+        </div>
+      </section>
+
+      <section id="sec02">
+        <header>
+          <h2><span>集客施策</span></h2>
+        </header>
+        <div class="innerS">
+          <h3>SEO（検索エンジン）</h3>
+          <p>
+            SEOとは、自社サイトがGoogleやYahooなどの検索エンジンによって上位に掲載されることを狙い、コンテンツを最適化することです。検索上位に自社サイトが表示されることにより、アクセス数のアップと商品の購入や商談の数を増やすことを目的とします。<br>
+            SEOは社内のリソースを使ってコストを抑えながら取り組めるというメリットがある一方で、多大な労力や時間、効果が出るまでに時間がかかるというデメリットを持ちます。
+          </p>
+
+          <h3>リスティング広告</h3>
+          <p>リスティング広告とは検索連動型広告のことで、ユーザーが検索したキーワードや閲覧しているWebページの内容に連動した広告が自動的に表示されるしくみです。ユーザーの興味関心や悩みなどのニーズにあわせた広告が表示されるので広告効果アップが期待できます。</p>
+          <p>上述の通りSEOには即効性が期待できないことから、それを補うためにSEOと並行して実践される手法がリスティング広告です。</p>
+
+          <h3>アフィリエイト広告</h3>
+          <p>アフィリエイト広告とは成功報酬型の広告宣伝プログラムです。BtoC向きの広告手法で、おもに会員登録や資料請求、ECサイトからの購入を促す場合に利用されます。</p>
+          <p>アフィリエイト広告はアフィリエイター（媒体主）のWebサイトやブログ、メールマガジンなどに自社（広告主）の情報のリンクを掲載してもらい、そのリンク経由で訪れたユーザーがコンバージョン（会員登録や資料・サンプル請求、購入など）に至った場合に、広告費が発生し、アフィリエイターへの報酬が発生するしくみです。</p>
+          <p>広告の出稿先としては法人サイトと個人サイトがあり、法人サイトでは会員あてに配信したメールマガジンなどからWebサイトに誘導し、個人サイトでは、商品・サービスの紹介ページや個人のブログ記事からバナーなどによって誘導をおこないます。</p>
+          <p>アフィリエイト広告を出稿する際には基本的に、媒体主と広告主を仲介する「ASP（アフィリエイト・サービス・プロバイダ）」というサービスを利用することになります。ASPの利用料は固定費として月ごとにかかりますが、自社の情報がASPを通してアフィリエイターに選ばれなければ掲載してもらえないというリスクを持ちます。</p>
+
+
+          <h3>アドネットワーク広告</h3>
+          <p>アドネットワーク広告とは、複数のWebサイトに広告を掲載するネット広告の手法です。<br>
+                      通常、複数の媒体へ広告を出稿するには、それぞれのメディアとの契約が必要になるうえ、媒体ごとに異なる料金体系や入稿形式に合わせなければなりません。その点、アドネットワーク広告では広告の出稿を一社のアドネットワーク業者に一括して任せることができるので効率的です。</p>
+          <p>広告を掲載した後は、項目や形式の揃った広告効果データをもらうことができ、媒体間での効果比較がしやすい点もメリットです。デメリットは、広告はアドネットワーク業者が持っている媒体に一様に出稿されるので、自社がターゲットとしていない層に向けたメディアにも掲載されることがある点です。</p>
+
+          <h3>SNS広告</h3>
+          <p>SNS広告とは、LINEやTwitter、FacebookなどのSNS（ソーシャル・ネットワーキング・サービス）を通して、ソーシャルメディアに向けて情報を広める仕組みの広告手法です。</p>
+          <p>インパクトのある内容でユーザーの興味・関心を集めることができれば、広告や写真、記事コンテンツなどがユーザーどうしの共有・拡散によって自然に広まっていくことが期待できます。そのためにはそれぞれのSNSのユーザー属性を把握し、拡散されやすいクリエイティブを制作・投稿することが重要です。</p>
+
+          <h3>リターゲティング広告</h3>
+          <p>リターゲティング広告とは、過去にそのWebサイトを訪れたことのあるユーザーに対象を絞って広告を出す手法です。気になっている商品はあるけれど購買を迷っている人など、潜在顧客となる可能性の高いユーザーに絞り込んで広告を表示でき、繰り返しアプローチできるので、費用対効果が高い方法だと言われます。</p>
+          <p>リターゲティング広告は、Webサイトにアクセスしたときにブラウザに付与される「クッキー」を持っているユーザーだけに配信されます。ユーザーからすると、違うサイトを見ているのに過去にアクセスしたことがあるページの広告が追いかけてくるような現象になるので、敬遠されないように工夫すると良いでしょう。</p>
+        </div>
+      </section>
+
+      <section id="sec03">
+        <header>
+          <h2><span>接客施策</span></h2>
+        </header>
+        <div class="innerS">
+          <h3>LPO(ランディングページの最適化）</h3>
+          <p>
+            LPOとはLanding Page Optimizationの略称で、ランディングページを改善し、集客効果を最大化させる施策です。
+            GoogleなどからWebサイトを訪問した際に、最初にユーザーが目にするWEBページをLP(ランディングページ)と呼びます。
+            また、広告を配信するときなどに特定の商品やユーザーに対象を絞って作られたページのことを指してランディングページということもあります。
+            ランディングページの最適化は多くの人が最初に目にするコンテンツであるため、改善することで大きな成果に繋がります。
+          </p>
+
+          <h3>EFO(入力フォーム最適化)</h3>
+          <p>
+            EFOとはEntry Form Optimizationの略称で、入力フォームやカートを改善してユーザーの離脱を減らす施策です。
+            入力フォームやカートはWeb上のゴールに近い場所にあるため、改善結果がWebマーケティングの成果に直接影響を与えます。
+            多くの場合、ユーザーが最初に接触するランディングページとゴールに近いエントリーフォームの最適化は、重要な改善ポイントになります。
+          </p>
+        </div>
+      </section>
+
+      <section id="sec04">
+        <header>
+          <h2><span>再訪問施策</span></h2>
+        </header>
+        <div class="innerS">
+          <h3>メルマガ（メールマガジン）</h3>
+          <p>
+            メルマガは、登録をおこなったユーザーに対して、定期的に情報を送り、購入や申し込みに促す施策です。
+            メルマガは、一般の広告と比べコストを抑えながら興味を持っている人たちに無理量配信をおこなえるのがメリットとなっています。
+          </p>
+        </div>
+      </section>
+
 
       <div class="nav-links">
 
