--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
   <meta name="viewport" content="width=device-width">
   <title>トップページ</title>
   <link rel="stylesheet" media="all" href="css/style.css">
-  <link href="code-prettify/prettify.css" type="text/css" rel="stylesheet">
-  <script type="text/javascript" src="code-prettify/prettify.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
   <script src="js/script.js"></script>
 </head>
 
-<body id="top" onload="prettyPrint()">
+<body id="top">
   <div id="wrapper">
 
     <div class="header">
@@ -85,21 +83,13 @@
 
 
     <div id="content">
-      <section>
-        <header>
-          <h2><span>サイトの目的</span></h2>
-        </header>
-        <div class="innerS">
-          <p>そのコンテンツの思想やなぜそれが必要なのかなど</p>
-        </div>
-      </section>
+
 
       <section id="sec01">
         <header>
           <h2><span>サイトの目的</span></h2>
         </header>
         <div class="innerS">
-          <h3>サブタイトルとか(なくても良い)</h3>
           <p>
             このサイトの目的は、これを見終わったみなさんがユニークで新しいwebサービスを提供し、インターネット上にたくさんの面白いコンテンツが溢れるようになることです。しかし、そのようなコンテンツは一夕一朝には作れずましてや何もないところからは現れません。それを作るためには前提知識を必要とすることが多くあります。その為このサイトでは突飛なアイデアにとらわれずこれまでのWebを形成してきた先人たちの知識を組み合わせたアイデアを前提知識として紹介することでそれに基づいたユニークなWebサイトを作れるようにお手伝いします。
             このサイトは、特定の目的を持ったwebサイトをみなさんが作れることは目的にしていません。しかし
@@ -111,41 +101,7 @@
         </div>
       </section>
 
-      <section id="sec02">
-        <header>
-          <h2><span>価値を決める基準</span></h2>
-        </header>
-        <div class="innerS">
-          <h3>理想とコンテンツの一致</h3>
-          <p>
-            可愛い、スポーツなど、プラスの感情を抱くもの。
-          </p>
-        </div>
-      </section>
 
-
-      <section id="sec03">
-        <header>
-          <h2><span>アイデアの価値</span></h2>
-        </header>
-        <div class="inner">
-          <div class="article">
-            <img src="images/photo02.jpg" width="370" height="224" alt="">
-            <p>興味を持って貰えるか、話が長い人は全体像が示せてない。全体像を提示すると興味を持ちやすい。発散と収束によってアイデアをまとめる。</p>
-            <p>画像右下あたりに表示される</p>
-          </div>
-        </div>
-      </section>
-
-
-      <section id="sec03">
-        <header>
-          <h2><span>オリジナルさ</span></h2>
-        </header>
-        <div class="innerS">
-          <p>時々真新しいデザインのWebサイトを見かける事があります。そんな時どうやったらあんな風にオリジナルなデザインにできるのだろうと思うことがあります。絵画の世界でも同様のことが言えます</p>
-        </div>
-      </section>
     <div class="nav-links">
       <a class="prev page-numbers" href="">«</a><!-- 現在の前のページへのリンク -->
       <a class="page-numbers" href="">1</a>
