--- a/level3/deploy.html
+++ b/level3/deploy.html
@@ -122,7 +122,7 @@
             <img src="../images/aws1.jpg" width="370" height="224">
             <ol>
               <li><a href="https://portal.aws.amazon.com/billing/signup#/start" target="_blank">awsのサインアップページ</a>に移動</li>
-              <li>表示されたページが「日本語」でない場合、ページ右上の言語選択ボックスより「日本語」を選択後、サインアップ画面へお進みください。</li>
+              <li>表示されたページが「日本語」でない場合、ページ右上の言語選択ボックスより「日本語」を選択後、サインアップ画面へ進んでください。</li>
               <li>「E メールアドレス」には、AWS へのログイン時に使用するメールアドレスを設定します。</li>
               <li>パスワード」および「パスワードの確認」で AWS へのログイン時に使用するパスワードを設定し、確認用にもう一度同じパスワードを入力します。</li>
               <li>AWS アカウント名」に、名前を半角アルファベットで入力します。入力が完了したら、「続行」ボタンをクリックします。</li>
@@ -140,7 +140,7 @@
                 <li>電話番号： 電話番号をハイフン・記号なしで入力します。<br>(例 : 0312345678)</li>
                 <li>住所： 住所の番地、建物名等を入力します。<br>(例 : 1-1-1, Kamiosaki ABC Building)</li>
                 <li>市区町村： 住所の市区町村名を入力します。<br>(例 : Shinagawa-ku)</li>
-                <li>州/都道府県または地域： ご住所の都道府県名を入力します。<br>(例 : Tokyo)</li>
+                <li>州/都道府県または地域： 住所の都道府県名を入力します。<br>(例 : Tokyo)</li>
                 <li>郵便番号： 住所の郵便番号をハイフン付きで入力します。<br>(例 : 141-0021)</li>
               </ul>
 
@@ -154,7 +154,7 @@
             <img src="../images/aws3.jpg" width="370" height="224">
             <ol>
               <li>AWS 無料利用枠内の利用に対し、料金は発生しません。</li>
-              <li>有効なクレジットカードまたはデビットカード情報を入力します。カード番号、有効期限などの情報に間違いのないようお気をつけください。</li>
+              <li>有効なクレジットカードまたはデビットカード情報を入力します。カード番号、有効期限などの情報に間違いのないよう気をつけください。</li>
               <li>請求先住所を選択します。前のステップで入力した住所と同様の場合は、「連絡先住所を使用する」を選択します。アカウント作成時に入力した住所と異なる請求先となる場合は、「新しい住所を使用する」を選択して、請求先住所を入力します。</li>
               <li>入力が完了したら、「確認して次へ」ボタンをクリックします。</li>
             </ol>
@@ -169,7 +169,7 @@
               <li>国コードで、国を選択し、電話番号を ②にハイフン・記号なしで入力します。（例：09012345678）</li>
               <li>③で、セキュリティチェック文字列として表示された英数字を入力します。</li>
               <li>入力が完了したら、SNS の場合「SNS を送信する」、音声通話の場合「今すぐ呼び出し」ボタンをクリックします。</li>
-              <li>SMS または電話（日本語自動音声）で 4 桁の 検証コードが届きます。検証コードが届いたら入力欄に検証コードを入力し、「続行」ボタンをクリックします。</li>
+              <li>SMS または電話（日本語自動音声）で 4 桁の検証コードが届きます。検証コードが届いたら入力欄に検証コードを入力し、「続行」ボタンをクリックします。</li>
             </ol>
             <img src="../images/aws5.jpg" width="370" height="224">
           </div>
