--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="header" style="z-index: 10000;">
             <div class="cp_navi">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li>
                         <a href="#">初心者編<span class="caret"></span></a>
                         <div>
@@ -208,7 +208,7 @@
 
         <section id="sec01" style="border-style: none;">
 
-                <h2><span>サイトの目的</span></h2>
+                <h2><span>Webサイトから、クリエイティブを。</span></h2>
 
             <div class="inner">
 
