--- a/level1/tutorial3.html
+++ b/level1/tutorial3.html
@@ -17,7 +17,7 @@
     <div class="header">
       <div class="cp_navi">
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li>
             <a href="#">初心者編<span class="caret"></span></a>
             <div>
@@ -67,8 +67,8 @@
             <ul>
               <li><a href="#top">top</a></li>
               <li><a href="#sec01">基本的なタグ説明</a></li>
-              <li><a href="#sec02">構造化データ</a></li>
-              <li><a href="#sec03">リッチスニペット</a></li>
+              <li><a href="#sec02"></a></li>
+              <li><a href="#sec03"></a></li>
             </ul>
             <ul id="sns">
               <li><a href="https://twitter.com/m_seminar" target="_blank"><img src="../images/iconTw.png" width="20" height="20" alt="twitter"></a></li>
@@ -132,8 +132,9 @@
           <h4>4.imgタグ</h4>
           <p>画像を貼り付ける際に使用するタグです。imgタグはインライン要素です。</p>
           <pre class="prettyprint linenums">
-&lt;img src=&quot;画像url&quot; alt=&quot;画像が表示されない時の言葉&quot; width=&quot;横幅&quot; height=&quot;高さ&quot;&gt;</pre>
-
+&lt;img src=&quot;画像url&quot; alt=&quot;画像が表示されない時の言葉&quot;
+width=&quot;横幅&quot; height=&quot;高さ&quot;&gt;</pre>
+          
           <br>
           <h4>5.tableタグ</h4>
           <p>テーブル（表）を作成するときに使用するタグです。</p>
@@ -210,11 +211,6 @@
       </div>
 
 
-    </div>
-    <div class="end">
-      <ul>
-        <li><a href="index.html">トップページ</a></li>
-      </ul>
     </div>
   </div>
 
