--- a/level2/layout2.html
+++ b/level2/layout2.html
@@ -18,7 +18,7 @@
     <div class="header">
       <div class="cp_navi">
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li>
             <a href="#">初心者編<span class="caret"></span></a>
             <div>
@@ -316,11 +316,13 @@ body {
   width:250px;
   height:300px;
   text-align:center;
-  margin-left:10px;/*サイドバーとメインコンテンツの間に隙間                    をあけた*/
+  margin-left:10px;/*サイドバーとメインコンテンツの間に隙間
+                      をあけた*/
 }
 
 article {
-  display:flex;/*サイドバーとメインコンテンツを横並びにする                指定をした*/
+  display:flex;/*サイドバーとメインコンテンツを横並びにする
+                  指定をした*/
 }</pre>
           <br>
           <h4>css</h4>
@@ -426,11 +428,6 @@ article {
 
     </div>
 
-    <div class="end">
-      <ul>
-        <li><a href="layout3.html">レイアウト3</a></li>
-      </ul>
-    </div>
 
   </div>
 
