--- a/level3/deploy.html
+++ b/level3/deploy.html
@@ -18,7 +18,7 @@
     <div class="header">
       <div class="cp_navi">
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li>
             <a href="#">初心者編<span class="caret"></span></a>
             <div>
@@ -67,12 +67,12 @@
           <div class="panel">
             <ul>
               <li><a href="#top">top</a></li>
-              <li><a href="#sec01">リンク</a></li>
-              <li><a href="#sec02">構造化データ</a></li>
-              <li><a href="#sec03">リッチスニペット</a></li>
-              <li><a href="#sec04">コンテンツの属性</a></li>
-              <li><a href="#sec05">ナレッジグラフ</a></li>
-              <li><a href="#sec06">サンプル</a></li>
+              <li><a href="#sec01">Amazon Simple Storage Service (S3)</a></li>
+              <li><a href="#sec02">AWSアカウントの作成</a></li>
+              <li><a href="#sec03">S3を用いてデプロイする。</a></li>
+              <li><a href="#sec04"></a></li>
+              <li><a href="#sec05"></a></li>
+              <li><a href="#sec06"></a></li>
             </ul>
             <ul id="sns">
               <li><a href="https://twitter.com/m_seminar" target="_blank"><img src="../images/iconTw.png" width="20" height="20" alt="twitter"></a></li>
