--- a/level3/history.html
+++ b/level3/history.html
@@ -16,7 +16,7 @@
     <div class="header">
       <div class="cp_navi">
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li>
             <a href="#">初心者編<span class="caret"></span></a>
             <div>
@@ -193,7 +193,7 @@
 				<a class="page-numbers" href="marketing.html">3</a>
 				<a class="page-numbers" href="idea.html">4</a>
 				<a class="page-numbers" href="law.html">5</a>
-				<a class="page-numbers current" href="history.html">6</a>
+				<span class="page-numbers current" href="history.html">6</span>
 			  </div>
 
 
