--- a/level3/law.html
+++ b/level3/law.html
@@ -15,6 +15,50 @@
 <body id="top" onload="prettyPrint()">
   <div id="wrapper">
 
+    <div class="header">
+      <div class="cp_navi">
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li>
+            <a href="#">初心者編<span class="caret"></span></a>
+            <div>
+              <ul>
+                <li><a href="../level1/tutorial1.html">チュートリアル1</a></li>
+                <li><a href="../level1/tutorial2.html">チュートリアル2</a></li>
+                <li><a href="../level1/tutorial3.html">チュートリアル3</a></li>
+                <li><a href="../level1/css.html">CSSについて</a></li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <a href="#">中級者編<span class="caret"></span></a>
+            <div>
+              <ul>
+                <li><a href="../level2/design.html">デザインとは</a></li>
+                <li><a href="../level2/layout.html">レイアウト1</a></li>
+                <li><a href="../level2/layout2.html">レイアウト2</a></li>
+                <li><a href="../level2/layout3.html">レイアウト3</a></li>
+                <li><a href="../level2/responsive.html">レスポンシブ</a></li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <a href="#">上級者編<span class="caret"></span></a>
+            <div>
+              <ul>
+                <li><a href="../level3/deploy.html">デプロイ</a></li>
+                <li><a href="../level3/seo.html">SEO</a></li>
+                <li><a href="../level3/marketing.html">マーケティング</a></li>
+                <li><a href="../level3/idea.html">アイデア</a></li>
+                <li><a href="../level3/law.html">法律</a></li>
+                <li><a href="../level3/history.html">歴史</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+
     <div id="sidebar">
       <div id="sidebarWrap">
 
@@ -130,6 +174,16 @@
           </div>
         </div>
       </section>
+      <div class="nav-links">
+				<a class="prev page-numbers" href="idea.html">«</a><!-- 現在の前のページへのリンク -->
+				<a class="page-numbers" href="deploy.html">1</a>
+				<a class="page-numbers" href="seo.html">2</a>
+				<a class="page-numbers" href="marketing.html">3</a>
+				<a class="page-numbers" href="idea.html">4</a>
+				<span class="page-numbers current" href="law.html">5</span>
+				<a class="page-numbers" href="history.html">6</a>
+				<a class="next page-numbers" href="history.html">»</a><!-- 現在の次のページへのリンク -->
+			  </div>
 
 
 
