--- a/level1/tutorial1.html
+++ b/level1/tutorial1.html
@@ -18,7 +18,7 @@
     <div class="header">
       <div class="cp_navi">
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li>
             <a href="#">初心者編<span class="caret"></span></a>
             <div>
@@ -222,11 +222,6 @@
 
     </div>
 
-    <div class="end">
-      <ul>
-        <li><a href="tutorial2.html">チュートリアル2</a></li>
-      </ul>
-    </div>
   </div>
 
 </body>
