--- a/level1/tutorial2.html
+++ b/level1/tutorial2.html
@@ -18,7 +18,7 @@
     <div class="header">
       <div class="cp_navi">
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li>
             <a href="#">初心者編<span class="caret"></span></a>
             <div>
@@ -90,7 +90,7 @@
         </div>
       </section>
 
-      <section id="01">
+      <section id="sec01">
         <header>
           <h2><span>Webサイトについて</span></h2>
         </header>
