--- a/level2/layout.html
+++ b/level2/layout.html
@@ -17,7 +17,7 @@
     <div class="header">
       <div class="cp_navi">
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li>
             <a href="#">初心者編<span class="caret"></span></a>
             <div>
@@ -185,15 +185,17 @@ p{
         &lt;h1&gt;グリッドレイアウトを学ぼう&lt;/h1&gt;
 
         &lt;p class=&quot;row1&quot;&gt;
-            グリッドは、列と行を定義する水平線と垂直線の集合が交差したものです。
-            要素をグリッド上の行と列の中に配置することができます。
+            グリッドは、列と行を定義する水平線と垂直線の集合が
+            交差したものです。要素をグリッド上の行と列の中に
+            配置することができます。
         &lt;/p&gt;
         &lt;img class=&quot;row1&quot; src=&quot;dog1.jpg&quot;&gt;
 
         &lt;img class=&quot;row2&quot; src=&quot;dog2.jpg&quot;&gt;
         &lt;p class=&quot;row2&quot;&gt;
-            HTMLだけでは、左上に張り付いた状態になっていますがグリッドレイアウトを適用すれば
-            大体どの位置に画像や文章を配置するかなどを決める事ができます。
+            HTMLだけでは、左上に張り付いた状態になっていますが
+            グリッドレイアウトを適用すれば大体どの位置に画像や文章を
+            配置するかなどを決める事ができます。
         &lt;/p&gt;
 
     &lt;/body&gt;
