--- a/level2/layout3.html
+++ b/level2/layout3.html
@@ -16,7 +16,7 @@
 		<div class="header">
 			<div class="cp_navi">
 				<ul>
-					<li><a href="#">Home</a></li>
+					<li><a href="../index.html">Home</a></li>
 					<li>
 						<a href="#">初心者編<span class="caret"></span></a>
 						<div>
@@ -197,15 +197,18 @@
 					</p>
 					<pre class="prettyprint linenums">
 body {
-	padding-top: 90px; /* ヘッダーの後ろに要素が隠れないようにするため */
+	padding-top: 90px; /* ヘッダーの後ろに要素が隠れないように
+	するため */
 }
 
 header {
 	width: 100%; /* 幅いっぱいを指定 */
 	height: 50px; /* 高さを50pxに指定 */
 	background: #CCC; /* 背景色にグレーを指定 */
-	padding: 20px 50px; /* ヘッダーに上下左右それぞれ余白を指定 */
-	box-sizing: border-box; /* padding分を含んで幅を100%にするため */
+	padding: 20px 50px; /* ヘッダーに上下左右それぞれ余白を
+	指定 */
+	box-sizing: border-box; /* padding分を含んで幅を100%に
+	するため */
 	position: fixed; /* ウィンドウを基準に画面に固定 */
 	top: 0; /* 上下の固定位置を上から0pxにする */
 	left: 0; /* 左右の固定位置を左から0pxにする */
@@ -222,7 +225,8 @@ header .gnav .menu li + li {
 }
 
 main {
-	height: 100vw; /* スクロールの演出を見れるようにmainに高さを指定 */
+	height: 100vw; /* スクロールの演出を見れるようにmainに高さを
+	指定 */
 }</pre>
 					  <p>これは上のCSSで実装できます。実際にヘッダーを固定するのに重要なのはposition:fixedというCSSです。
 					  </p>
@@ -249,5 +253,4 @@ main {
   </div>
 </body>
 
-<footer><a href="layout4.html?">次のページへGO</a>
 </html>
