everything is completed

--- a/level1/css.html
+++ b/level1/css.html
@@ -32,7 +32,7 @@
     <div class="header">
       <div class="cp_navi">
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li>
             <a href="#">初心者編<span class="caret"></span></a>
             <div>
@@ -145,7 +145,7 @@
             background-color:red;
             }
             &lt;/style&gt;
-            
+
           </pre>
           <p style="color: red;">この方法ではHTMLとCSSが一つのファイルで管理できるため、小規模開発であれば見やすくてよいですね。</p>
           <h3>style属性を用いる方法</h3>
