--- a/level2/layout2.html
+++ b/level2/layout2.html
@@ -14,11 +14,11 @@
 
 <body id="top" onload="prettyPrint()">
   <div id="wrapper">
-    
+
     <div class="header">
       <div class="cp_navi">
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li>
             <a href="#">初心者編<span class="caret"></span></a>
             <div>
