--- a/level3/deploy.html
+++ b/level3/deploy.html
@@ -18,7 +18,7 @@
     <div class="header">
       <div class="cp_navi">
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li>
             <a href="#">初心者編<span class="caret"></span></a>
             <div>
@@ -117,9 +117,9 @@
           <h2><span>AWSアカウントの作成</span></h2>
         </header>
         <div class="inner">
-          <h3>ステップ 1: AWS アカウントの作成</h3>
+          <h3 style="width: 100% !important;">ステップ 1: AWS アカウントの作成</h3>
           <div class="article">
-            <img src="../images/aws1.jpg" width="370" height="224">
+            <img src="../images/aws1.jpg" width="370" height="224" style="border-style: none;">
             <ol>
               <li><a href="https://portal.aws.amazon.com/billing/signup#/start" target="_blank">awsのサインアップページ</a>に移動</li>
               <li>表示されたページが「日本語」でない場合、ページ右上の言語選択ボックスより「日本語」を選択後、サインアップ画面へ進んでください。</li>
@@ -129,9 +129,9 @@
             </ol>
           </div>
 
-          <h3>ステップ 2: 連絡先情報の入力</h3>
+          <h3 style="width: 100% !important;">ステップ 2: 連絡先情報の入力</h3>
           <div class="article">
-            <img src="../images/aws2.jpg" width="370" height="224">
+            <img src="../images/aws2.jpg" width="370" height="224" style="border-style: none;">
             <ol>
               <li>個人の使用であれば「個人 - ご自身のプロジェクト向け」を選択します。</li>
               <li>連絡先情報は、すべて「半角アルファベットおよび半角数字」 で入力します。</li>
@@ -149,9 +149,9 @@
           </div>
 
 
-          <h3>ステップ 3: 請求情報の入力</h3>
+          <h3 style="width: 100% !important;">ステップ 3: 請求情報の入力</h3>
           <div class="article">
-            <img src="../images/aws3.jpg" width="370" height="224">
+            <img src="../images/aws3.jpg" width="370" height="224" style="border-style: none;">
             <ol>
               <li>AWS 無料利用枠内の利用に対し、料金は発生しません。</li>
               <li>有効なクレジットカードまたはデビットカード情報を入力します。カード番号、有効期限などの情報に間違いのないよう気をつけください。</li>
@@ -161,9 +161,9 @@
           </div>
 
 
-          <h3>ステップ 4: SMS または音声電話による本人確認</h3>
+          <h3 style="width: 100% !important;">ステップ 4: SMS または音声電話による本人確認</h3>
           <div class="article">
-            <img src="../images/aws4.jpg" width="370" height="2">
+            <img src="../images/aws4.jpg" width="370" height="224" style="border-style: none;">
             <ol>
               <li>① で検証コードの受け取り方法を選択します。</li>
               <li>国コードで、国を選択し、電話番号を ②にハイフン・記号なしで入力します。（例：09012345678）</li>
@@ -171,12 +171,12 @@
               <li>入力が完了したら、SNS の場合「SNS を送信する」、音声通話の場合「今すぐ呼び出し」ボタンをクリックします。</li>
               <li>SMS または電話（日本語自動音声）で 4 桁の検証コードが届きます。検証コードが届いたら入力欄に検証コードを入力し、「続行」ボタンをクリックします。</li>
             </ol>
-            <img src="../images/aws5.jpg" width="370" height="224">
+            <img src="../images/aws5.jpg" width="370" height="224" style="border-style: none;">
           </div>
 
-          <h3>ステップ 5: AWS サポートプランの選択</h3>
+          <h3 style="width: 100% !important;">ステップ 5: AWS サポートプランの選択</h3>
           <div class="article">
-            <img src="../images/aws6.jpg" width="370" height="224">
+            <img src="../images/aws6.jpg" width="370" height="224" style="border-style: none;">
             <ol>
               <li>今回はS3を使うだけなので「ベーシックサポート」を選択します。</li>
               <li>選択が完了したら、「サインアップを完了」ボタンをクリックします。</li>
@@ -190,7 +190,7 @@
 
       <section id="sec03">
         <header>
-          <h2><span>S3を用いてデプロイする。</span></h2>
+          <h2 style="width: 100% !important;"><span>S3を用いてデプロイする。</span></h2>
         </header>
         <div class="innerS">
           <img src="../images/s31.jpg">
