--- a/level1/tutorial3.html
+++ b/level1/tutorial3.html
@@ -196,8 +196,14 @@
               <p>この記述がheadタグやbodyタグの中にある場合、JavaScriptを呼び出して何かをしようとしていると認識しましょう。</p>
               <pre class="prettyprint linenums">
 &lt;script src="script.js"&gt;  &lt;/script&gt;</pre>
+<h4>9.divタグ</h4>
+<p>コンテンツのまとまりを表します。この要素の前後には改行が挿入されます。このような要素のことをブロック要素といいます。</p>
+<h4>10.spanタグ
+</h4>
+<p>spanタグも上のdivタグと同様にコンテンツのまとまりを表します。しかし要素の前後には改行は挿入されません。このような要素のことをインライン要素といいます。</p>
         </div>
       </section>
+      
 
       <div class="nav-links">
         <a class="prev page-numbers" href="tutorial2.html">«</a><!-- 現在の前のページへのリンク -->
