--- a/level1/tutorial3.html
+++ b/level1/tutorial3.html
@@ -37,6 +37,7 @@
                 <li><a href="../level2/layout.html">レイアウト1</a></li>
                 <li><a href="../level2/layout2.html">レイアウト2</a></li>
                 <li><a href="../level2/layout3.html">レイアウト3</a></li>
+                <li><a href="../level2/color.html">色彩</a></li>
                 <li><a href="../level2/responsive.html">レスポンシブ</a></li>
               </ul>
             </div>
@@ -134,7 +135,7 @@
           <pre class="prettyprint linenums">
 &lt;img src=&quot;画像url&quot; alt=&quot;画像が表示されない時の言葉&quot;
 width=&quot;横幅&quot; height=&quot;高さ&quot;&gt;</pre>
-          
+
           <br>
           <h4>5.tableタグ</h4>
           <p>テーブル（表）を作成するときに使用するタグです。</p>
