--- a/level2/color.html
+++ b/level2/color.html
@@ -37,6 +37,7 @@
                 <li><a href="../level2/layout.html">レイアウト1</a></li>
                 <li><a href="../level2/layout2.html">レイアウト2</a></li>
                 <li><a href="../level2/layout3.html">レイアウト3</a></li>
+                <li><a href="../level2/color.html">色彩</a></li>
                 <li><a href="../level2/responsive.html">レスポンシブ</a></li>
               </ul>
             </div>
@@ -70,8 +71,6 @@
               <li><a href="#sec02">色の3属性</a></li>
               <li><a href="#sec03">トーン</a></li>
               <li><a href="#sec04">色の印象</a></li>
-              <li><a href="#sec05"></a></li>
-              <li><a href="#sec06"></a></li>
             </ul>
             <ul id="sns">
               <li><a href="https://twitter.com/m_seminar" target="_blank"><img src="../images/iconTw.png" width="20" height="20" alt="twitter"></a></li>
@@ -203,11 +202,16 @@
         </div>
       </section>
 
-      <section>
-        <div class="innerS">
-          <a href="design.html">ユニバーサルデザインに戻る</a>
-        </div>
-      </section>
+      <div class="nav-links">
+        <a class="prev page-numbers" href="design.html">«</a><!-- 現在の前のページへのリンク -->
+        <a class="page-numbers" href="design.html">1</a>
+        <a class="page-numbers " href="layout.html">2</a>
+        <a class="page-numbers" href="layout2.html">3</a>
+        <a class="page-numbers" href="layout3.html">4</a>
+        <span class="page-numbers current" href="color.html">5</span>
+        <a class="page-numbers" href="responsive.html">6</a>
+        <a class="next page-numbers" href="responsive.html">»</a><!-- 現在の次のページへのリンク -->
+      </div>
 
     </div>
   </div>
