--- a/level2/design.html
+++ b/level2/design.html
@@ -38,6 +38,7 @@
                 <li><a href="../level2/layout.html">レイアウト1</a></li>
                 <li><a href="../level2/layout2.html">レイアウト2</a></li>
                 <li><a href="../level2/layout3.html">レイアウト3</a></li>
+                <li><a href="../level2/color.html">色彩</a></li>
                 <li><a href="../level2/responsive.html">レスポンシブ</a></li>
               </ul>
             </div>
@@ -146,7 +147,7 @@ p{
             <h3>色の使い方</h3>
             <p>
               まず、色に関する知識の基本を知りたい場合は、<a href="color.html">こちら</a>から学習してください。
-            </p>  
+            </p>
             <p>AとBどちらの数字の方が読みやすいでしょうか。</p>
             <img src="../images/25iro.png">
             <p>Bの方が読みやすいと思います。よってBの方がいい配色であると言えます。
@@ -330,7 +331,8 @@ p{
         <a class="page-numbers" href="layout.html">2</a>
         <a class="page-numbers" href="layout2.html">3</a>
         <a class="page-numbers" href="layout3.html">4</a>
-        <a class="page-numbers" href="responsive.html">5</a>
+        <a class="page-numbers" href="color.html">5</a>
+        <a class="page-numbers" href="responsive.html">6</a>
         <a class="next page-numbers" href="layout.html">»</a><!-- 現在の次のページへのリンク -->
       </div>
 
