--- a/level2/layout.html
+++ b/level2/layout.html
@@ -37,6 +37,7 @@
                 <li><a href="../level2/layout.html">レイアウト1</a></li>
                 <li><a href="../level2/layout2.html">レイアウト2</a></li>
                 <li><a href="../level2/layout3.html">レイアウト3</a></li>
+                <li><a href="../level2/color.html">色彩</a></li>
                 <li><a href="../level2/responsive.html">レスポンシブ</a></li>
               </ul>
             </div>
@@ -340,7 +341,8 @@ border-radius: 枠の太さ;   border-style: 形;   border-color: 色;
         <span class="page-numbers current" href="layout.html">2</span>
         <a class="page-numbers" href="layout2.html">3</a>
         <a class="page-numbers" href="layout3.html">4</a>
-        <a class="page-numbers" href="responsive.html">5</a>
+        <a class="page-numbers" href="color.html">5</a>
+        <a class="page-numbers" href="responsive.html">6</a>
         <a class="next page-numbers" href="layout2.html">»</a><!-- 現在の次のページへのリンク -->
       </div>
 
