--- a/level2/layout3.html
+++ b/level2/layout3.html
@@ -36,6 +36,7 @@
 								<li><a href="../level2/layout.html">レイアウト1</a></li>
 								<li><a href="../level2/layout2.html">レイアウト2</a></li>
 								<li><a href="../level2/layout3.html">レイアウト3</a></li>
+								<li><a href="../level2/color.html">色彩</a></li>
 								<li><a href="../level2/responsive.html">レスポンシブ</a></li>
 							</ul>
 						</div>
@@ -241,13 +242,10 @@ main {
 				<a class="page-numbers" href="layout.html">2</a>
 				<a class="page-numbers" href="layout2.html">3</a>
 				<span class="page-numbers current" href="layout3.html">4</span>
-				<a class="page-numbers" href="responsive.html">5</a>
+				<a class="page-numbers" href="color.html">5</a>
+				<a class="page-numbers" href="responsive.html">6</a>
 				<a class="next page-numbers" href="responsive.html">»</a><!-- 現在の次のページへのリンク -->
-			  </div>
-
-
-
-
+			</div>
 
     </div>
   </div>
