--- a/level2/responsive.html
+++ b/level2/responsive.html
@@ -38,6 +38,7 @@
                 <li><a href="../level2/layout.html">レイアウト1</a></li>
                 <li><a href="../level2/layout2.html">レイアウト2</a></li>
                 <li><a href="../level2/layout3.html">レイアウト3</a></li>
+                <li><a href="../level2/color.html">色彩</a></li>
                 <li><a href="../level2/responsive.html">レスポンシブ</a></li>
               </ul>
             </div>
@@ -70,9 +71,6 @@
               <li><a href="#sec01">レスポンシブデザインのメリット・デメリット</a></li>
               <li><a href="#sec02">実装方法</a></li>
               <li><a href="#sec03">まとめ</a></li>
-              <li><a href="#sec04"></a></li>
-              <li><a href="#sec05"></a></li>
-              <li><a href="#sec06"></a></li>
             </ul>
             <ul id="sns">
               <li><a href="https://twitter.com/m_seminar" target="_blank"><img src="../images/iconTw.png" width="20" height="20" alt="twitter"></a></li>
@@ -207,7 +205,8 @@
         <a class="page-numbers" href="layout.html">2</a>
         <a class="page-numbers" href="layout2.html">3</a>
         <a class="page-numbers" href="layout3.html">4</a>
-        <span class="page-numbers current" href="responsive.html">5</span>
+        <a class="page-numbers" href="color.html">5</a>
+        <span class="page-numbers current" href="responsive.html">6</span>
       </div>
 
 
