--- a/level3/seo.html
+++ b/level3/seo.html
@@ -38,6 +38,7 @@
 								<li><a href="../level2/layout.html">レイアウト1</a></li>
 								<li><a href="../level2/layout2.html">レイアウト2</a></li>
 								<li><a href="../level2/layout3.html">レイアウト3</a></li>
+								<li><a href="../level2/color.html">色彩</a></li>
 								<li><a href="../level2/responsive.html">レスポンシブ</a></li>
 							</ul>
 						</div>
