--- a/level3/idea.html
+++ b/level3/idea.html
@@ -215,7 +215,8 @@
           <h3></h3>
           <p>
             このようにしていくつかの例を挙げて発想法をみてきました。
-            あとは頑張ってください。（急に投げ出していくスタイル）
+            あとはこれをどのようにして使うかです。それぞれに合う発想法を用いて、あるいはそれぞれに合う発想法を
+            新たに考案してクリエイティブなアイデアを出してください。
           </p>
         </div>
       </section>
