--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
             wheel.navItems[0].navigateFunction = function () {
                 top.innerText = "目的";
-                top1.innerText = "このサイトの目的は、これを見終わったみなさんがユニークで新しいwebサービスを提供し、インターネット上にたくさんの面白いコンテンツが溢れるようになることです。しかし、そのようなコンテンツは一夕一朝には作れずましてや何もないところからは現れません。それを作るためには前提知識を必要とすることが多くあります。その為このサイトでは突飛なアイデアにとらわれずこれまでのWebを形成してきた先人たちの知識を組み合わせたアイデアを前提知識として紹介することでそれに基づいたユニークなWebサイトを作れるようにお手伝いします。このサイトは、特定の目的を持ったwebサイトをみなさんが作れることは目的にしていません。"
+                top1.innerText = "このサイトの目的は、これを見終わったみなさんがユニークで新しいwebサービスを提供し、インターネット上にたくさんの面白いコンテンツが溢れるようになることです。しかし、そのようなコンテンツは一夕一朝には作れずましてや何もないところからは現れません。それを作るためには前提知識を必要とすることが多くあります。その為このサイトでは突飛なアイデアにとらわれずこれまでのWebを形成してきた先人たちの知識を組み合わせたアイデアを前提知識として紹介することでそれに基づいたユニークなWebサイトを作れるようにお手伝いします。"
                 btn.innerHTML = '';
             };
             wheel.navItems[1].navigateFunction = function () {
@@ -216,7 +216,7 @@
                 <div id="wheelDiv"></div>
                 <div id="para">
                     <h2 id="topic">目的</h2>
-                    <p id="para1">このサイトの目的は、これを見終わったみなさんがユニークで新しいwebサービスを提供し、インターネット上にたくさんの面白いコンテンツが溢れるようになることです。しかし、そのようなコンテンツは一夕一朝には作れずましてや何もないところからは現れません。それを作るためには前提知識を必要とすることが多くあります。その為このサイトでは突飛なアイデアにとらわれずこれまでのWebを形成してきた先人たちの知識を組み合わせたアイデアを前提知識として紹介することでそれに基づいたユニークなWebサイトを作れるようにお手伝いします。このサイトは、特定の目的を持ったwebサイトをみなさんが作れることは目的にしていません。</p>
+                    <p id="para1">このサイトの目的は、これを見終わったみなさんがユニークで新しいwebサービスを提供し、インターネット上にたくさんの面白いコンテンツが溢れるようになることです。しかし、そのようなコンテンツは一夕一朝には作れずましてや何もないところからは現れません。それを作るためには前提知識を必要とすることが多くあります。その為このサイトでは突飛なアイデアにとらわれずこれまでのWebを形成してきた先人たちの知識を組み合わせたアイデアを前提知識として紹介することでそれに基づいたユニークなWebサイトを作れるようにお手伝いします。</p>
                     <p id="btn"></p>
                 </div>
 
