--- a/level2/design.html
+++ b/level2/design.html
@@ -97,9 +97,9 @@
           <p>そう考えてみると、あらゆるものは利用者目線で作られています。つまり、人のために最適な形を表現することこそがデザインなのです。</p>
           <br><h4>デザインの必要性</h4>
           <ul>
-            <li>・伝えたいことが伝わりやすくなる</li>
-            <li>・言葉では伝えられない情報を伝えられる</li>
-            <li>・効率性や安全性の向上など…</li>
+            <li>伝えたいことが伝わりやすくなる</li>
+            <li>言葉では伝えられない情報を伝えられる</li>
+            <li>効率性や安全性の向上など…</li>
           </ul>
           <p>つまり、デザインはコミュニケーション手段の1つでもあるのです。</p>
         </div>
@@ -118,7 +118,7 @@
                 </p><br>
                 <p>1990年代では、テキストを段や列に分けるというナビゲーション機能を持たせる技術が浸透しました。</p><br>
                 <p>2000年代に入ると、CSSへの対応が進みました。Webデザイナーがデザインから開発をするなど比較的自由となり、divタグが普及し、Webサイトはメンテナンスのしやすさと読み込み時間の短縮が可能になりました。</p><br>
-                <p>2000年代中期ではWeb2.0が登場し、Webを端末やOS、アプリケーションの制約を受けずに結びつけられるようになりました。個人レベルで発信できるようになったことで「YouTube」や「Twitter」などのSNSサービスが世界中に広がりました。コンテンツはSEO重視に変化した。<br>
+                <p>2000年代中期ではWeb2.0が登場し、Webを端末やOS、アプリケーションの制約を受けずに結びつけられるようになりました。個人レベルで発信できるようになったことで「YouTube」や「Twitter」などのSNSサービスが世界中に広がりました。コンテンツはSEO重視に変化しました。<br>
                 <p>今日では、スマートフォンがWebデザインの対象となってきました。フラットデザインや、マテリアルデザインが登場し、多様化するデバイスに対応できるようになりました。</p>
                 </p>
                 <p>ここから先は、Webサイトにおけるデザインについて考えていきます。</p>
